<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_menu">

    <TextView
        android:id="@+id/mainMenuWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginLeft="60dp"
        android:textSize="20sp"
        android:fontFamily="@font/druk_wide_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/mainMenuWelcome"
        app:layout_constraintRight_toLeftOf="@id/main_menuTxtView" />

    <TextView
        android:id="@+id/main_menuTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:textSize="20sp"
        android:fontFamily="@font/druk_wide_bold"
        android:text="@string/mainMenuText"
        app:layout_constraintLeft_toRightOf="@id/mainMenuWelcome"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/mainMenuRules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/mainMenuRules"
        app:layout_constraintTop_toBottomOf="@id/mainMenuWelcome" />

    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:background="@color/springGreen"
        android:textAlignment="center"
        android:fontFamily="@font/druk_wide_bold"
        android:text="@string/startGame"
        app:layout_constraintTop_toBottomOf="@id/mainMenuRules"
        app:layout_constraintBottom_toTopOf="@id/logoutBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/main_menuTxtView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/logoutBtn"
        android:text="@string/logout"/>


</androidx.constraintlayout.widget.ConstraintLayout>