<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/houseOfCardTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="-100dp"
        android:layout_marginTop="150dp"
        android:text="@string/house_of_cards"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/druk_wide_bold"
        android:rotation="90"/>
    <ImageView
        android:id="@+id/blackBackgroundWithCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:src="@drawable/subtract"
        />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="100dp"
        android:text="@string/login"
        android:textSize="20dp"
        android:fontFamily="@font/monument_extended"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        app:cornerRadius="10dp"/>
    <Button
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:layout_marginBottom="50dp"
        android:text="@string/sign_up"
        android:textSize="20dp"
        android:fontFamily="@font/monument_extended"
        android:backgroundTint="@color/darkRed"
        android:textColor="@color/white"
        app:cornerRadius="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>