<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FetchActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:text="@string/urlText"
        android:textColor="@color/black"
        android:fontFamily="@font/druk_wide_bold"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/url"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:importantForAutofill="no"
        android:imeOptions="actionSend"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:inputType="textNoSuggestions"/>

    <Button
        android:id="@+id/fetchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/monument_extended"
        android:text="@string/fetch"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@color/gray"
        style="?android:attr/progressBarStyleHorizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/monument_extended"
        android:text="@string/download"
        android:textColor="@color/black"/>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:horizontalSpacing="0dp"
        android:numColumns="5"
        android:verticalSpacing="0dp"
        android:background="@color/red"
        android:layout_gravity="center" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/app_image" />
</LinearLayout>